Update the project to use the IntelliJ Platform Gradle Plugin 2.0 and Java 21